GearsetPOC/force-app/main/default/objects/NR_to_AccountCTC__c/NR_to_AccountCTC__c.object-meta.xml
<CustomObject>
    <description>Junction Object delivered to support New Corporate Offer Project May /June 2024</description>
    <label>NR to Account CTC</label>
    <nameField>
        <displayFormat>NRC-{000000}</displayFormat>
        <label>NR to Account CTC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NR to Account CTCs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>