GearsetPOC/force-app/main/default/objects/NR_to_AccountCTC__c/fields/Account_CTC__c.field-meta.xml
<CustomField>
    <fullName>Account_CTC__c</fullName>
    <label>Account CTC</label>
    <referenceTo>B2b_AccountCTC__c</referenceTo>
    <relationshipLabel>NR to Account CTCs</relationshipLabel>
    <relationshipName>NR_to_Account_CTCs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>