GearsetPOC/force-app/main/default/objects/NR_to_AccountCTC__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(
    NOT(Account_CTC__r.Active__c), 
    FALSE, 
    IF(
        AND(
            OR(
                Account_CTC__r.Code_Record_Type__c = &#39;Corporate code Amadeus&#39;,
                Account_CTC__r.Code_Record_Type__c = &#39;Corporate code Apollo&#39;,
                Account_CTC__r.Code_Record_Type__c = &#39;Corporate code Galileo&#39;,
                Account_CTC__r.Code_Record_Type__c = &#39;Corporate code Sabre&#39;
            ), 
            Account_CTC__r.Corp_Tracking_Type_And_Code__r.Active_Account_PCCs__c = 0
        ), 
        FALSE, 
        TRUE
    )
)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>