GearsetPOC/force-app/main/default/objects/NR_to_AccountCTC__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <formula>Account_CTC__r.Business_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Account</label>
    <type>Text</type>
</CustomField>