GearsetPOC/force-app/main/default/objects/NR_to_AccountCTC__c/fields/Code_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Record_Type__c</fullName>
    <formula>Account_CTC__r.Code_Record_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Record Type</label>
    <type>Text</type>
</CustomField>