GearsetPOC/force-app/main/default/objects/NR_to_AccountCTC__c/fields/Corporate_Code__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Code__c</fullName>
    <formula>Account_CTC__r.Corporate_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Code Name</label>
    <type>Text</type>
</CustomField>