GearsetPOC/force-app/main/default/objects/NR_to_AccountCTC__c/fields/Negotiated_Rate__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Rate__c</fullName>
    <label>Negotiated Rate</label>
    <referenceTo>B2b_NrDetails__c</referenceTo>
    <relationshipLabel>NR to Account CTCs</relationshipLabel>
    <relationshipName>NR_to_Account_CTCs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>